fix for sort-thing/admin menu spacing issue

--- a/sites/default/themes/mnartists/sass/style.scss
+++ b/sites/default/themes/mnartists/sass/style.scss
@@ -9503,7 +9503,7 @@ body.wysiwygeditor {
     }
 }
 
-.logged-in {
+.admin-menu {
     .panel-2col.layout-a {
         .sort-thing {
             top: 21px;
